# midi-presets

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: restrict_changes.yml  validate_presets.yml
devices/expressivee/: expressivee_osmose.json
devices/expressivee/community/: user_preset_example.json
scripts/: generate_checksums.py  generate_preset_metadata.py  validate_presets.py
src/midi_presets/: __init__.py
src/midi_presets/checksum/: __init__.py  calculator.py  manifest.py
src/midi_presets/cli/: __init__.py  checksum.py  main.py  validate.py
src/midi_presets/models/: __init__.py  base.py  collection.py  device.py  manifest.py  preset.py
src/midi_presets/utils/: __init__.py  config.py  git.py  logging.py
src/midi_presets/validation/: __init__.py  base.py  business.py  content.py  security.py  structure.py
tests/: conftest.py  test_validation_content.py
